[package]
authors = ["Cariad Eccleston <cariad@cariad.earth>"]
description = "Compare AWS S3 objects"
edition = "2021"
license = "MIT"
name = "s3same"
readme = "README.md"
repository = "https://github.com/cariad/s3same"
version = "1.0.0-alpha.0"

[dependencies]
aws-sdk-s3 = "1.83.0"
base64 = "0.22.1"
crc64fast-nvme = "1.2.0"
s3uri = "1.0.0-beta.7"

[dev-dependencies]
aws-config = "1.6.2"
dotenv = "0.15.0"
envish = "1.0.0-alpha.1"
tokio = { version = "1.44.2", features = ["full"] }
